# arch-competition-ops

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_DEPLOY_RUNBOOK.md  DATA_CONTRACT.md  PORT_SCRIPT.md  README.md  dev-port.ps1  findings.md  package-lock.json  package.json  playwright-emperador-network.txt  playwright-emperador-snapshot.md  progress.md  pyproject.toml  task_plan.md  tsconfig.base.json  vision.md
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.build.json  tsconfig.json  wrangler.jsonc
apps/worker/: README.md
config/: automation.yml  filters.yml  procedure-type-registry.json  sources.yml  taxonomy.yml
config/prompts/: extract_competition.md  summarize_brief.md
config/source_lists/: germany_municipal_profiles.txt  italy_city_authorities.txt
config/source_packs/: README.md  _template.country.yml  core.yml  france.yml  germany.yml  italy.yml  switzerland.yml
data/: geocoding-cache.json
docs/: AGENTS.md  AI_CONSTRAINTS.md  ARCHITECTURE.md  SETUP.md
docs/ai/: doc-governance-standard.md
docs/changelog/: AGENTS.md  CHANGELOG_2026-04-21.md  CHANGELOG_2026-04-22.md  CHANGELOG_2026-04-30.md  CHANGELOG_2026-05-07.md  CHANGELOG_2026-05-09.md  CHANGELOG_2026-05-11.md  README.md  (+6 more)
modes/: _shared.md  brief.md  digest.md  extract.md  scan.md  verify.md
scripts/: doc-governance.mjs  export-d1-data.mjs  prepare-cloudflare-build.ps1  register-auto-ingest-tasks.ps1  run-ingest-batch.ps1  sync-satellite-previews.mjs  write-opportunity-preview-revisions.mjs
tests/: dev-port.test.mjs
(+230 files in other folders)
